...
    // eslint-disable-next-line react-hooks/exhaustive-deps
  }, [durationMs, warmupMs, velocity, data.length, seed, manualMode]);

  return (
    <View style={styles.container}>
      <FlashList
        testID="list-scroll-list"
        ref={listRef}
        data={data}
        keyExtractor={(item) => String(item.id)}
        renderItem={({ item }) => <Card item={item} width={width} />}
        scrollEnabled={manualMode}
      />
...
